apps/network/unifi/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: unifiproxy
  namespace: unifi
spec:
  virtualhost:
    fqdn: unifi.cornerstones.home
    tls:
      secretName: unifiproxy
  routes:
  - services:
    - name: unifi
      port: 8443
      protocol: tls
  - conditions:
    - prefix: /wss
    enableWebsockets: true
    services:
      - name: unifi
        port: 8443
        protocol: tls
