apps/network/unifi/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ingress
  namespace: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`control.local`) || Host(`worker01.local`) || Host(`worker01.local`)) && PathPrefix(`/unifi`)
      kind: Rule
      services:
        - name: unifi-gui
          port: 443
